--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,8 +3,12 @@ file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Program Files\\NetB
 file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\08-Conexiones a bases de datos JDBC\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 file.reference.primefaces-8.0.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\primefaces-8.0.jar
+j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Oracle12c/Middleware/Oracle_Home/user_projects/domains/base_domain
 j2ee.server.home=C:/Oracle12c/Middleware/Oracle_Home/wlserver
 j2ee.server.instance=deployer:WebLogic:http://localhost:7001:C:\\Oracle12c\\Middleware\\Oracle_Home\\wlserver:C:\\Oracle12c\\Middleware\\Oracle_Home\\user_projects\\domains\\base_domain
 j2ee.server.middleware=C:/Oracle12c/Middleware/Oracle_Home
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\crist\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
