Gestion de Empleados

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,14 @@
-file.reference.eclipselink.jar=/home/henry/Desktop/librerias/APERSISTENCIA/eclipselink.jar
-file.reference.javax.persistence_2.1.0.v201304241213.jar=/home/henry/Desktop/librerias/APERSISTENCIA/javax.persistence_2.1.0.v201304241213.jar
-file.reference.mysql-connector-java-8.0.20.jar=/home/henry/Desktop/librerias/mysql-connector-java-8.0.20/mysql-connector-java-8.0.20.jar
-file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=/home/henry/Desktop/librerias/APERSISTENCIA/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
-file.reference.primefaces-8.0.jar=/home/henry/Desktop/librerias/primefaces-8.0.jar
-j2ee.server.domain=/home/henry/Oracle/Middleware/Oracle_Home/user_projects/domains/base_domain
-j2ee.server.home=/home/henry/Oracle/Middleware/Oracle_Home/wlserver
-j2ee.server.instance=deployer:WebLogic:http://localhost:7001:/home/henry/Oracle/Middleware/Oracle_Home/wlserver:/home/henry/Oracle/Middleware/Oracle_Home/user_projects/domains/base_domain
-j2ee.server.middleware=/home/henry/Oracle/Middleware/Oracle_Home
-user.properties.file=/home/henry/.netbeans/8.2/build.properties
+file.reference.bcpkix-jdk15on-149.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\bcpkix-jdk15on-149.jar
+file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\com.lowagie.text-2.1.7.jar
+file.reference.eclipselink.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\eclipselink.jar
+file.reference.iText7-Core-7.1.3.zip=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\iText7-Core-7.1.3.zip
+file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\javax.persistence_2.1.0.v201304241213.jar
+file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\08-Conexiones a bases de datos JDBC\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
+file.reference.poi-4.1.2.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\poi-4.1.2.jar
+file.reference.primefaces-8.0.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\primefaces-8.0.jar
+j2ee.server.domain=C:/Oracle12c/Middleware/Oracle_Home/user_projects/domains/base_domain
+j2ee.server.home=C:/Oracle12c/Middleware/Oracle_Home/wlserver
+j2ee.server.instance=deployer:WebLogic:http://localhost:7001:C:\\Oracle12c\\Middleware\\Oracle_Home\\wlserver:C:\\Oracle12c\\Middleware\\Oracle_Home\\user_projects\\domains\\base_domain
+j2ee.server.middleware=C:/Oracle12c/Middleware/Oracle_Home
+user.properties.file=C:\\Users\\crist\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
