--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.bcpkix-jdk15on-149.jar=/home/henry/Desktop/librerias/bcpkix-jdk15
 file.reference.com.lowagie.text-2.1.7.jar=/home/henry/Desktop/librerias/com.lowagie.text-2.1.7.jar
 file.reference.eclipselink.jar=/home/henry/Desktop/librerias/APERSISTENCIA/eclipselink.jar
 file.reference.iText7-Core-7.1.3.zip=/home/henry/Desktop/librerias/iText7-Core-7.1.3.zip
+file.reference.jasypt-1.9.3.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\jasypt-1.9.3\\lib\\jasypt-1.9.3.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=/home/henry/Desktop/librerias/APERSISTENCIA/javax.persistence_2.1.0.v201304241213.jar
 file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\08-Conexiones a bases de datos JDBC\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=/home/henry/Desktop/librerias/APERSISTENCIA/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
@@ -56,7 +57,8 @@ javac.classpath=\
     ${file.reference.iText7-Core-7.1.3.zip}:\
     ${file.reference.com.lowagie.text-2.1.7.jar}:\
     ${file.reference.bcpkix-jdk15on-149.jar}:\
-    ${file.reference.poi-4.1.2.jar}
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.jasypt-1.9.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
