finalizacion del sistema

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,7 +4,7 @@ file.reference.eclipselink.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\e
 file.reference.iText7-Core-7.1.3.zip=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\iText7-Core-7.1.3.zip
 file.reference.jasypt-1.9.3.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\jasypt-1.9.3\\lib\\jasypt-1.9.3.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\javax.persistence_2.1.0.v201304241213.jar
-file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\08-Conexiones a bases de datos JDBC\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\eclipselink\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 file.reference.poi-4.1.2.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\librerias del proyecto 5\\poi-4.1.2.jar
 file.reference.primefaces-8.0.jar=C:\\Users\\crist\\OneDrive\\Desktop\\Curso de java Empresarial Bitlab\\Libs\\primefaces-8.0.jar
